<resources>
    <string name="app_name">ZeedSHOP</string>

    <string name="menu_account">Manage Account</string>
    <string name="menu_profile">Your Profile</string>
    <string name="menu_login">Welcome to boodaBEST!</string>

    <string name="login_desc">The Best brands are waiting for you \nPlease login</string>


    <string name="nav_bottom_home">Home</string>
    <string name="nav_bottom_notification">Notification</string>
    <string name="nav_bottom_cart">Cart</string>
    <string name="nav_bottom_account">Account</string>

    <string name="product_latest">Latest</string>
    <string name="product_best_seller">Best Seller</string>

    <string name="brand_explore">Explore the <font color='#00b0ff'>BEST</font> brands</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_brand_nav">Explore %1$s’s Brand Story</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_new_member">New member?</string>
    <string name="login_sign_up_here">Sign up here</string>
    <string name="login_submit_btn">Login</string>
    <string name="login_submit_loading_btn">Logging In…</string>
    <string name="login_sign_up_btn">Sign Up</string>
    <string name="account_menu_logout">Logout</string>
    <string name="account_menu_profile">Profile</string>
    <string name="account_menu_address">Address Book</string>
    <string name="account_menu_payment">Payment Option</string>
    <string name="account_menu_change_password">Change Password</string>
    <string name="account_menu_order">Order</string>
    <string name="account_menu_change_lang">Language Change</string>
    <string name="account_profile_edit_profile_photo">Edit Profile Photo</string>
    <string name="account_profile_save">Save</string>
    <string name="account_profile_cancel">Cancel</string>
    <string name="account_profile_first_name">First Name</string>
    <string name="account_profile_last_name">Last Name</string>
    <string name="account_profile_phone_number">Phone Number</string>
    <string name="account_profile_email">Email</string>
</resources>